Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4808

Creating unsigned symbian packages are wrongly named

XMLWordPrintable

    • e1f89cfaf94204c831ce3d1d04b36d7b89a6885f

      When you create an unsigned symbian package, the package will be named with the pattern %appname%_installer_unsigned.sis

      However, if you try to execute the Run action with unsigned .sis, you get an error like this:

      :-1: error: Failed to find package 'D:/workspace/myapp/myapp_unsigned_installer.sis': Package file not found
      

      Which obviously doesn't exist since the words unsigned and installer are flipped.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jaggernod Paweł Polański
            holmsted Lasse Holmstedt
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes