Symbian: Unsigned installer's file does not install

Task-number: QTCREATORBUG-4808